<resources>
    <string name="app_name">Peluqueria</string>
    <string name="title_activity_administrador__v">Administrador_V</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="iniciarsesion">Iniciar Sesión</string>
    <string name="registrar">Registrar</string>
    <string name="registro">Registro de Clientes</string>
    <string name="numero">Ingresa tu número telefonico</string>
    <string name="nombre">Ingresa tu nombre</string>
    <string name="apellidos">Ingresa tus apellidos</string>
    <string name="direccion">Ingresa tú direccion de residencia</string>
    <string name="contraseña">Ingresa una contraseña</string>
    <string name="barberia">Bienvenido a tu barberia KC</string>
    <string name="registrate">Presiona aqui para registrarte</string>
    <string name="nombre_v">Nombre del Cliente</string>
    <string name="numero_v">Numero de telefono del cliente</string>
    <string name="reserva">Reserva tu cita</string>
    <string name="mickey">Mickey - $3.000</string>
    <string name="barba">Barba - $5.000</string>
    <string name="clientes">Corte de cabello - $10.000</string>
    <string name="seleccion">Seleccione el servicio que desea:</string>
    <string name="bienvenido">Bienvenido a su Barberia de confianza</string>
    <string name="barbero">Selecciona a un barbero</string>
    <string name="dia">Ingresa el dia que quieres reservar</string>
    <string name="horario">Selecciona un horario</string>
    <string name="cancelar">Cancelar reserva</string>
    <string name="horario_dia">Horario de la Mañana</string>
    <string name="horario_tarde">Horario de la Tarde</string>
    <string name="horario_noche">Horario de la noche</string>
    <string name="completar_reserva">Completar Reserva</string>
    <string name="reservada">Peluqueada Reservada</string>
    <string name="pelquero">Peluquero</string>
    <string name="precio">Precio servicio</string>
    <string name="estado">Estado reserva</string>
    <string name="fecha">Fecha cita</string>
    <string name="reservas">Peluqueadas Reservadas</string>
    <string name="cliente">Cita Reservada</string>
    <string name="terminar">Despachar Cliente</string>
    <string name="bienvenido2">Bienvenido a tu centro de atencion</string>
    <string name="servicios">Servicios cita</string>
    <string name="end">Ingrese el valor recibido</string>

    <string-array name="Turnos_Mañana_Completo">
        <item>8:00 am</item>
        <item>8:55 am</item>
        <item>9:50 am</item>
        <item>10:45 am</item>
        <item>11:40 am</item>
        <item>12:35 pm</item>
    </string-array>
    <string-array name="Turnos_Mañana_Diez">
        <item>8:45 am</item>
        <item>9:40 am</item>
        <item>10:35 am</item>
        <item>11:30 am</item>
        <item>12:25 pm</item>
        <item>12:45 pm</item>
    </string-array>


    <string-array name="Turnos_Tarde_Completo">
        <item>2:00 pm</item>
        <item>2:55 pm</item>
        <item>3:50 pm</item>
        <item>4:45 pm</item>
        <item>5:40 pm</item>
    </string-array>
    <string-array name="Turnos_Tarde_Diez">
        <item>2:45 pm</item>
        <item>3:40 pm</item>
        <item>4:35 pm</item>
        <item>5:30 pm</item>
    </string-array>


    <string-array name="Turnos_Noche_Completo">
        <item>7:30 pm</item>
        <item>8:25 pm</item>
        <item>9:20 pm</item>
    </string-array>
    <string-array name="Turnos_Noche_Diez">
        <item>8:15 pm</item>
        <item>9:10 pm</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ganancias">Ganancias</string>
    <string name="empleados">Empleados</string>
    <string name="clien">Clientes</string>
    <string name="client">Cliente</string>
    <string name="eliminar">Eliminar</string>
    <string name="editar">Editar</string>
    <string name="modificar">Modificar</string>
    <string name="numeroc">Ingresa el numero a modificar</string>
    <string name="buscar">Ingrese una fecha</string>

</resources>