<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_reservas">

    <fragment
        android:id="@+id/nav_reservas"
        android:name="com.unipacifico.peluqueria.vistas.administrador.reservas.Reservas_V_Administrador"
        android:label="@string/reservas"
        tools:layout="@layout/fragment_reservas__v__administrador" />

    <fragment
        android:id="@+id/nav_empleados"
        android:name="com.unipacifico.peluqueria.vistas.administrador.empleados.Empleados_V_Administrador"
        android:label="@string/empleados"
        tools:layout="@layout/fragment_empleados__v__administrador" />
    <fragment
        android:id="@+id/nav_clientes"
        android:name="com.unipacifico.peluqueria.vistas.administrador.clientes.Clientes_V_Administrador"
        android:label="@string/clien"
        tools:layout="@layout/fragment_clientes__v__administrador" />


</navigation>