<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/telefono_cliente_alert"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/redondo"
            android:fontFamily="sans-serif-light"
            android:hint="@string/numeroc"
            android:inputType="number"
            android:maxLength="10"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/nombre_cliente_alert"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/redondo"
            android:fontFamily="sans-serif-light"
            android:hint="@string/nombre"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/apellido_cliente_alert"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/redondo"
            android:fontFamily="sans-serif-light"
            android:hint="@string/apellidos"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/direccion_cliente_alert"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/redondo"
            android:fontFamily="sans-serif-light"
            android:hint="@string/direccion"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/contrasena_cliente_alert"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/redondo"
            android:fontFamily="sans-serif-light"
            android:hint="@string/contraseña"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editar_cliente_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/amiko_bold"
            android:text="@string/modificar"
            android:textColor="@color/black"
            app:cornerRadius="20dp" />
    </LinearLayout>

</RelativeLayout>