<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-light"
            android:text="@string/barbero"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold" />


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/peluquero_v_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="RadioButton"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/peluquero_v_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="RadioButton"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/peluquero_v_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="RadioButton"
                android:textColor="@color/white" />
        </RadioGroup>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-light"
            android:text="@string/horario"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/horario_dia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/horario_dia"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/horario_tarde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/horario_tarde"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/horario_noche"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/horario_noche"
                android:textColor="@color/white" />
        </RadioGroup>

        <Spinner
            android:id="@+id/spinner_horario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:textAlignment="center"
            android:background="@color/white"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/dia_reserva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/white"
            android:inputType="date"
            android:focusable="false"
            android:clickable="true"
            android:maxLines="1"
            android:hint="@string/dia"
            android:editable="false"
            android:backgroundTint="@color/white"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/completar_reserva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/amiko_bold"
            android:text="@string/completar_reserva"
            android:textColor="@color/black"
            app:cornerRadius="20dp" />
    </LinearLayout>
</RelativeLayout>