<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:background="@color/black"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/reserva"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:elevation="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:text="@string/cliente"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cliente_row_trabajador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/cliente"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/servicios_row_trabajador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/servicios"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/precio_row_trabajadores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/precio"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/estado_row_trabajadores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/estado"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/fecha_row_trabajadores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/fecha"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/terminar_row_trabajadores"
                android:textColor="@color/black"
                app:cornerRadius="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/amiko_bold"
                android:layout_gravity="center"
                android:text="@string/terminar" />



        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>