<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/black"
    android:gravity="center">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:elevation="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/black"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="165dp"
                    android:layout_height="158dp"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="200dp"
                    app:cardElevation="20dp">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="150dp"
                        android:layout_height="135dp"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/cliente"
                        tools:srcCompat="@drawable/cliente" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/black"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/titolo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/client"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/nombre_row_clientes_administrador"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/pelquero"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/telefono_row_clientes_administrador"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5sp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/direccion"
                        android:textAlignment="center"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/apellido_row_clientes_administrador"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5sp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/precio"
                        android:textAlignment="center"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/direccion_row_clientes_administrador"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5sp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/estado"
                        android:textAlignment="center"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/contrasena_row_clientes_administrador"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5sp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/fecha"
                        android:textAlignment="center"
                        android:textColor="@color/white" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/eliminar_row_clientes_administrador"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:backgroundTint="#FF0000"
                    android:fontFamily="@font/amiko_bold"
                    android:text="@string/eliminar"
                    android:textColor="@color/white"
                    app:cornerRadius="10dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/editar_row_clientes_administrador"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/amiko_bold"
                    android:text="@string/editar"
                    android:textColor="@color/black"
                    app:cornerRadius="10dp" />
            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>